Source/WebCore: Web Inspector: include failed and canceled in FrameResourceTree.

https://webkit.org/b/78445

Reviewed by Pavel Feldman.

Test: inspector/protocol/page-agent.html

* WebCore.xcodeproj/project.pbxproj: Added Inspector.json, Inspector-0.1.json and Inspector-1.0.json
for quick access and easy editing.
* inspector/Inspector.json: Added failed and canceled as optional properties to the object for resources in FrameResourceTree.
* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::buildObjectForFrameTree): Set those properties.

LayoutTests: Test for Web Inspector: include failed and canceled in FrameResourceTree.

https://webkit.org/b/78445

Reviewed by Pavel Feldman.

* inspector/protocol/page-agent-expected.txt: Added.
* inspector/protocol/page-agent.html: Added.
* inspector/protocol/resources/dummy-iframe.html: Added.
* inspector/protocol/resources/empty.png: Added.
* inspector/protocol/resources/font1.ttf: Added.
* inspector/protocol/resources/font2.ttf: Added.

Canonical link: https://commits.webkit.org/95560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107714 268f45cc-cd09-0410-ab3c-d52691b4dbfc